test/compile_errors/err_c_import_untranslated_object_macro_requires_allow.h
typedef struct BadObjectMacro {
    int x;
} BadObjectMacro;

#define BAD_OBJECT_MACRO (BadObjectMacro){ .x = ({ int y = 1; y; }) }
